@@ -3,6 +3,9 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2013-02-27 (SVN):
+    * oslibs,windows: update dinput.h from mingw-w64 svn repo rev.5620.
+
 2013-02-25 (SVN):
     * r_main.c (R_ViewChanged): when fov_adapt is in effect, calculate
       the yscale global using the properly computed verticalFieldOfView
